# termo-hs

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  palavras.txt  termo-hs.cabal
app/: Main.hs
src/: Game.hs
tests/: Main.hs
