cabal-version:      3.0
name:               termo-hs
version:            0.1.0.0
synopsis:           Jogue Termo na linha de comando

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             Valdson Francisco Silva Santos Júnior
maintainer:         valdsonfrancisco.jr@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable termo-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        array,
        base ^>=4.17.2.1,
        containers,
        mtl,
        pretty-terminal,
        random,
        text,
        transformers
    hs-source-dirs:   app
    ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    default-language: Haskell2010
