cabal-version:      3.0
name:               termo-hs
version:            0.1.0.0
synopsis:           Jogue Termo na linha de comando

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            ISC
license-file:       LICENSE
author:             Valdson Francisco Silva Santos Júnior
maintainer:         valdsonfrancisco.jr@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md


common shared
    ghc-options:
        -Wall
        -Wunused-packages
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints
    build-depends:    base ^>=4.17.2.1, text
    default-language: Haskell2010

executable termo-hs
    import:           shared
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    build-depends:
        termo-hs,
        random
    hs-source-dirs:   app

library
    import:           shared
    exposed-modules:    Game
    build-depends:
        array,
        containers,
        mtl ^>=2.3.1,
        pretty-terminal,
        transformers
    hs-source-dirs:   src

test-suite termo-hs-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:    termo-hs, tasty, tasty-hunit
